arm_cfn/KogenceARM/KogenceARM/KogenceARM/nestedtemplates/nest-net-security.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "masterSecurityGroup": {
      "type": "string",
      "metadata": {
        "description": "The Azure Network Security Group Name"
      }
    },
    "variables": {},
    "resources": [
      {
        "name": "[parameters('masterSecurityGroup')]",
        "apiVersion": "2017-10-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "[resourceGroup().location]",
        "properties": {
          "securityRules": [
            {
              "name": "ingress_rule_ssh",
              "properties": {
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "ingress_rule_http",
              "properties": {
                "description": "Allow HTTP",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            }
          ]
        }
      }
    ],
    "outputs": {}
  }
}
